# ft_irc

./: .clang-format  .env.example  .gitignore  .gitmodules  Authentification.hpp  CLAUDE.md  Channel.hpp  Client.hpp  Commands.hpp  DOCUMENTATION.md  Macros.hpp  Makefile  README.md  Server.hpp  bot.hpp  bsd.hpp  common.hpp  docker-compose.yml  help.hpp  irc.cpp  irc.h  ircserv  subject.txt  sys.hpp
.github/workflows/: ci.yml
companions/ai-assistant/: Cargo.toml  Dockerfile  README.md
companions/ai-assistant/src/: main.rs
companions/realtime-bridge/: Cargo.toml  Dockerfile  README.md
companions/realtime-bridge/src/: main.rs
include/: AuditLog.hpp  Bot.hpp  Channel.hpp  Client.hpp  IrcCase.hpp  Log.hpp  Message.hpp  PlatformBus.hpp  Replies.hpp  Server.hpp
include/ext/: IServerExtension.hpp  RegisterExtensions.hpp
include/extras/: FancyLogSink.hpp
scripts/: audit.sh  memcheck.sh  normalize.sh
src/: AuditLog.cpp  Bot.cpp  Channel.cpp  Client.cpp  CommandChannel.cpp  CommandMessaging.cpp  CommandOperator.cpp  CommandQuery.cpp  CommandRegistration.cpp  IrcCase.cpp  Log.cpp  Message.cpp  PlatformBus.cpp  Server.cpp  main.cpp
src/extras/: FancyLogSink.cpp
src/tiers/: tier_bonus.cpp  tier_full.cpp  tier_mandatory.cpp
tests/: COVERAGE.md  Makefile  TESTING.md  TestHarness.hpp  test_bot.cpp  test_extensions.cpp  test_integration.cpp  test_main.cpp  test_postman.cpp  test_robustness.cpp  test_security.cpp
