[package]
name = "ai-assistant"
version = "0.1.0"
edition = "2021"
description = "IRC companion that answers when addressed, via the Claude API"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
