[package]
name = "realtime-bridge"
version = "0.1.0"
edition = "2021"
description = "Bidirectional bridge between ircserv and realtime-agnostic"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
